--- a/examples/trials/mnist-nas/config_ppo.yml
+++ b/examples/trials/mnist-nas/config_ppo.yml
@@ -9,8 +9,7 @@ trainingServicePlatform: local
 useAnnotation: true
 tuner:
   #choice: TPE, Random, Anneal, Evolution, BatchTuner, MetisTuner
-  #SMAC (SMAC should be installed through nnictl)
-  #codeDir: ~/nni/nni/examples/tuners/random_nas_tuner
+  #SMAC, PPO (SMAC and PPO should be installed through nnictl)
   builtinTunerName: PPOTuner
   classArgs:
     optimize_mode: maximize
