--- a/examples/trials/nas_cifar10/config_ppo.yml
+++ b/examples/trials/nas_cifar10/config_ppo.yml
@@ -15,7 +15,7 @@ tuner:
     trials_per_update: 60
     epochs_per_update: 12
     minibatch_size: 10
-  #could the No. 0 gpu for this tuner
+  #could use the No. 0 gpu for this tuner
   gpuIndices: 0
 trial:
   command: sh ./macro_cifar10.sh
