--- a/examples/trials/nas_cifar10/config_ppo.yml
+++ b/examples/trials/nas_cifar10/config_ppo.yml
@@ -15,6 +15,9 @@ tuner:
     trials_per_update: 60
     epochs_per_update: 12
     minibatch_size: 10
+  #could use the No. 0 gpu for this tuner
+  #if want to specify multiple gpus, here is an example of specifying three gpus: 0,1,2
+  gpuIndices: 0
 trial:
   command: sh ./macro_cifar10.sh
   codeDir: ./
