--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ jobs:
   - script: |
       python3 -m pip install torch==0.4.1 --user
       python3 -m pip install torchvision==0.2.1 --user
-      python3 -m pip install tensorflow --user
+      python3 -m pip install tensorflow==1.13.1 --user
     displayName: 'Install dependencies for integration'
   - script: |
       source install.sh
