--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,8 +13,8 @@ jobs:
   - script: |
       python3 -m pip install torch==0.4.1 --user
       python3 -m pip install torchvision==0.2.1 --user
-      python3 -m pip install tensorflow==1.12.0 --user
-    displayName: 'Install dependencies for integration'
+      python3 -m pip install tensorflow==1.13.1 --user
+    displayName: 'Install dependencies'
   - script: |
       source install.sh
     displayName: 'Install nni toolkit via source code'
@@ -59,7 +59,7 @@ jobs:
       python3 -m pip install torch==0.4.1 --user
       python3 -m pip install torchvision==0.2.1 --user
       python3 -m pip install tensorflow==1.13.1 --user
-    displayName: 'Install dependencies for integration'
+    displayName: 'Install dependencies'
   - script: |
       source install.sh
     displayName: 'Install nni toolkit via source code'
@@ -97,16 +97,12 @@ jobs:
       python -m pip install keras==2.1.6 --user
       python -m pip install https://download.pytorch.org/whl/cu90/torch-0.4.1-cp36-cp36m-win_amd64.whl --user
       python -m pip install torchvision --user
-      python -m pip install tensorflow-gpu==1.11.0 --user
-    displayName: 'Install dependencies for tests'
+      python -m pip install tensorflow==1.13.1 --user
+    displayName: 'Install dependencies'
   - script: |
       cd test
       powershell.exe -file unittest.ps1
     displayName: 'unit test'
-  - script: |
-      cd test
-      python naive_test.py
-    displayName: 'Naive test'
   - script: |
       cd test
       python tuner_test.py
