--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -105,6 +105,10 @@ jobs:
     displayName: 'unit test'
   - script: |
       cd test
+      python naive_test.py
+    displayName: 'Naive test'
+  - script: |
+      cd test
       python tuner_test.py
     displayName: 'Built-in tuners / assessors tests'
   - script: |
