--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -103,3 +103,15 @@ jobs:
       cd test
       powershell.exe -file unittest.ps1
     displayName: 'unit test'
+  - script: |
+      cd test
+      python tuner_test.py
+    displayName: 'Built-in tuners / assessors tests'
+  - script: |
+      cd test
+      python metrics_test.py
+    displayName: 'Trial job metrics test'
+  - script: |
+      cd test
+      PATH=$HOME/.local/bin:$PATH python3 cli_test.py
+    displayName: 'nnicli test'
