--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,11 +11,16 @@ jobs:
   - script: |
       python3 -m pip install --upgrade pip setuptools --user
       python3 -m pip install pylint==2.3.1 --user
+      python3 -m pip install coverage --user
     displayName: 'Install python tools'
   - script: |
       python3 -m pip install torch==0.4.1 --user
       python3 -m pip install torchvision==0.2.1 --user
-      python3 -m pip install tensorflow==1.12.0 --user
+      python3 -m pip install tensorflow==1.13.1 --user
+      python3 -m pip install keras==2.1.6 --user
+      sudo apt-get install swig -y
+      PATH=$HOME/.local/bin:$PATH nnictl package install --name=SMAC
+      PATH=$HOME/.local/bin:$PATH nnictl package install --name=BOHB
     displayName: 'Install dependencies for integration'
   - script: |
       source install.sh
