--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ jobs:
   steps:
   - script: |
       python3 -m pip install --upgrade pip setuptools --user
-      python3 -m pip install pylint==2.3.1 --user
+      python3 -m pip install pylint==2.3.1 astroid=2.2.5 --user
       python3 -m pip install coverage --user
     displayName: 'Install python tools'
   - script: |
@@ -27,6 +27,7 @@ jobs:
       PATH=$HOME/.local/bin:$PATH nnictl package install --name=BOHB
     displayName: 'Install dependencies'
   - script: |
+      set -e
       python3 -m pylint --rcfile pylintrc nni_annotation
       python3 -m pylint --rcfile pylintrc nni_cmd
       python3 -m pylint --rcfile pylintrc nni_gpu_tool
