--- a/test/pipelines-it-installation.yml
+++ b/test/pipelines-it-installation.yml
@@ -18,6 +18,25 @@ jobs:
       ~/.local/bin/nnictl create --config config.yml
     displayName: 'mnist test'
 
+jobs:
+- job: 'dev_install_ubuntu_python36'
+  pool:
+    vmImage: 'ubuntu-18.04'
+  strategy:
+    matrix:
+      Python36:
+        PYTHON_VERSION: '3.6'
+
+  steps:
+  - script: |
+      make dev-install
+    displayName: 'make dev install'
+  - script: |
+      cd examples/trials/mnist
+      ~/.local/bin/nnictl create --config config.yml
+    displayName: 'mnist test'
+
+
 - job: 'pip_install_macOS_python36'
   pool:
     vmImage: 'macOS-10.13'
@@ -32,13 +51,6 @@ jobs:
       python3 -m pip install --upgrade pip setuptools --user
       python3 -m pip install --upgrade nni --user
     displayName: 'Install nni'
-  - script: |
-      cd examples/trials/mnist
-      $BIN_FOLDER = $(python3 -c 'import site; from pathlib import Path; print(Path(site.getsitepackages()[0]).parents[2])')/bin
-      $CMD = $BIN_FOLDER + '/nnictl create --config config.yml'
-      echo $CMD
-      $CMD
-    displayName: 'mnist test'
 
 - job: 'pip_install_windows_python36'
   pool:
@@ -54,8 +66,3 @@ jobs:
       python3 -m pip install --upgrade pip setuptools --user
       python -m pip install --upgrade nni --user
     displayName: 'Install nni'
-  - powershell: |
-      cd examples/trials/mnist
-      $CMD = $(python -c 'import site; from pathlib import Path; print(Path(site.getsitepackages()[0]))') + '\Scripts\nnictl.exe create --config config.yml'
-      cmd /c $CMD
-    displayName: 'mnist test'
