--- a/src/nni_manager/package.json
+++ b/src/nni_manager/package.json
@@ -18,7 +18,7 @@
     "js-base64": "^2.4.9",
     "kubernetes-client": "^6.5.0",
     "rx": "^4.1.0",
-    "sqlite3": "^4.0.2",
+    "sqlite3": "4.0.2",
     "ssh2": "^0.6.1",
     "stream-buffers": "^3.0.2",
     "tail-stream": "^0.3.4",
@@ -38,7 +38,7 @@
     "@types/node": "10.12.18",
     "@types/request": "^2.47.1",
     "@types/rx": "^4.1.1",
-    "@types/sqlite3": "^3.1.3",
+    "@types/sqlite3": "3.1.3",
     "@types/ssh2": "^0.5.35",
     "@types/stream-buffers": "^3.0.2",
     "@types/tmp": "^0.0.33",
