--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,6 +84,7 @@ jobs:
       ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)" < /dev/null 2> /dev/null
       brew install swig@3
       ln -s /usr/local/opt/swig\@3/bin/swig /usr/local/bin/swig
+      nnictl package install --name=SMAC
     displayName: 'Install dependencies'
   - script: |
       cd test
