--- a/test/pipelines-it-installation.yml
+++ b/test/pipelines-it-installation.yml
@@ -44,6 +44,6 @@ jobs:
   steps:
   - script: |
       python -V
-      python3 -m pip install --upgrade pip setuptools --user
+      python -m pip install --upgrade pip setuptools --user
       python -m pip install --upgrade nni --user
     displayName: 'Install nni'
