--- a/test/pipelines-it-local.yml
+++ b/test/pipelines-it-local.yml
@@ -13,6 +13,7 @@ jobs:
       python3 -m pip install torchvision==0.4.0 --user
       python3 -m pip install keras==2.1.6 --user
       python3 -m pip install tensorflow-gpu==1.12.0 --user
+      python3 -m pip install lightgbm
       sudo apt-get install swig -y
       PATH=$HOME/.local/bin:$PATH nnictl package install --name=SMAC
       PATH=$HOME/.local/bin:$PATH nnictl package install --name=BOHB
