--- a/examples/trials/mnist-tfv2/config.yml
+++ b/examples/trials/mnist-tfv2/config.yml
@@ -1,5 +1,5 @@
 authorName: NNI Example
-experimentName: MNIST on TensorFlow v2.x
+experimentName: MNIST TF v2.x
 trialConcurrency: 1
 maxExecDuration: 1h
 maxTrialNum: 10
