--- a/examples/trials/mnist-tfv2/config_windows.yml
+++ b/examples/trials/mnist-tfv2/config_windows.yml
@@ -1,5 +1,5 @@
-authorName: default
-experimentName: example_mnist
+authorName: NNI Example
+experimentName: MNIST TF v2.x
 trialConcurrency: 1
 maxExecDuration: 1h
 maxTrialNum: 10
