--- a/examples/nas/classic_nas/config_ppo.yml
+++ b/examples/nas/classic_nas/config_ppo.yml
@@ -5,7 +5,8 @@ maxExecDuration: 100h
 maxTrialNum: 1000
 #choice: local, remote, pai
 trainingServicePlatform: local
-searchSpacePath: NNI_AUTO_GEN
+#please use `nnictl ss_gen` to generate search space file first
+searchSpacePath: <the_generated_search_space_path>
 useAnnotation: False
 tuner:
   builtinTunerName: PPOTuner
