--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ jobs:
       Python36:
         PYTHON_VERSION: '3.6'
   steps:
-  - powershell: install.ps1
+  - powershell: ./install.ps1
     displayName: 'Install nni toolkit via source code'
   - script: |
       python -m pip install scikit-learn==0.20.0 --user
@@ -17,7 +17,7 @@ jobs:
       python -m pip install torchvision --user
       python -m pip install tensorflow-gpu==1.11.0 --user
     displayName: 'Install dependencies for integration tests'
-  - powershell: test/unittest.ps1
+  - powershell: ./test/unittest.ps1
     workingDirectory: test
     failOnStderr: false
     errorActionPreference: stop
