--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,15 +8,15 @@ jobs:
       Python36:
         PYTHON_VERSION: '3.6'
   steps:
-  - powershell: ./install.ps1
-    displayName: 'Install nni toolkit via source code'
-  - script: |
-      python -m pip install scikit-learn==0.20.0 --user
-      python -m pip install keras==2.1.6 --user
-      python -m pip install https://download.pytorch.org/whl/cu90/torch-0.4.1-cp36-cp36m-win_amd64.whl --user
-      python -m pip install torchvision --user
-      python -m pip install tensorflow-gpu==1.11.0 --user
-    displayName: 'Install dependencies for integration tests'
+#  - powershell: ./install.ps1
+#    displayName: 'Install nni toolkit via source code'
+#  - script: |
+#      python -m pip install scikit-learn==0.20.0 --user
+#      python -m pip install keras==2.1.6 --user
+#      python -m pip install https://download.pytorch.org/whl/cu90/torch-0.4.1-cp36-cp36m-win_amd64.whl --user
+#      python -m pip install torchvision --user
+#      python -m pip install tensorflow-gpu==1.11.0 --user
+#    displayName: 'Install dependencies for integration tests'
   - powershell: ./unittest.ps1
     workingDirectory: test
     failOnStderr: false
