test finding unittest

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,4 +20,5 @@ jobs:
   - powershell: ./unittest.ps1
     workingDirectory: test
     failOnStderr: false
+    errorActionPreference: silentlyContinue
     displayName: 'unit test only'
