--- a/test/pipelines-it-local-windows.yml
+++ b/test/pipelines-it-local-windows.yml
@@ -12,14 +12,14 @@ jobs:
       python -m pip install torchvision --user
       python -m pip install tensorflow-gpu==1.11.0 --user
     displayName: 'Install dependencies for integration tests'
-  - script: |
-      cd test
-      python generate_ts_config.py --ts local
-    displayName: 'generate config files'
-  - script: |
-      cd test
-      python config_test.py --ts local --local_gpu --exclude smac,bohb
-    displayName: 'Examples and advanced features tests on local machine'
+#  - script: |
+#      cd test
+#      python generate_ts_config.py --ts local
+#    displayName: 'generate config files'
+#  - script: |
+#      cd test
+#      python config_test.py --ts local --local_gpu --exclude smac,bohb
+#    displayName: 'Examples and advanced features tests on local machine'
   - script: |
       cd test
       powershell.exe -file unittest.ps1
