test tf v1 example

--- a/test/config_test/examples/mnist-tfv1.test.yml
+++ b/test/config_test/examples/mnist-tfv1.test.yml
@@ -12,8 +12,8 @@ assessor:
   classArgs:
     optimize_mode: maximize
 trial:
-  codeDir: ../../../examples/trials/mnist-tfv2
-  command: python3 mnist.py
+  codeDir: ../../../examples/trials/mnist-tfv1
+  command: python3 mnist.py --batch_num 100
   gpuNum: 0
 
 useAnnotation: false
