--- a/test/pipelines-it-local-windows.yml
+++ b/test/pipelines-it-local-windows.yml
@@ -2,9 +2,9 @@ jobs:
 - job: 'Test'
 
   steps:
-  - script: |
-      powershell.exe -file install.ps1
-    displayName: 'Install nni toolkit via source code'
+#  - script: |
+#      powershell.exe -file install.ps1
+#    displayName: 'Install nni toolkit via source code'
 #  - script: |
 #      python -m pip install scikit-learn==0.20.0 --user
 #      python -m pip install keras==2.1.6 --user
