--- a/test/pipelines-it-local-windows.yml
+++ b/test/pipelines-it-local-windows.yml
@@ -2,9 +2,9 @@ jobs:
 - job: 'Test'
 
   steps:
-#  - script: |
-#      powershell.exe -file install.ps1
-#    displayName: 'Install nni toolkit via source code'
+  - script: |
+      powershell.exe -file install.ps1
+    displayName: 'Install nni toolkit via source code'
 #  - script: |
 #      python -m pip install scikit-learn==0.20.0 --user
 #      python -m pip install keras==2.1.6 --user
@@ -28,15 +28,15 @@ jobs:
       cd test
       python naive_test.py
     displayName: 'Naive test'
-#  - script: |
-#      cd test
-#      python tuner_test.py
-#    displayName: 'Built-in tuners / assessors tests'
-#  - script: |
-#      cd test
-#      python metrics_test.py
-#    displayName: 'Trial job metrics test'
-#  - script: |
-#      cd test
-#      PATH=$HOME/.local/bin:$PATH python3 cli_test.py
-#    displayName: 'nnicli test'
+  - script: |
+      cd test
+      python tuner_test.py
+    displayName: 'Built-in tuners / assessors tests'
+  - script: |
+      cd test
+      python metrics_test.py
+    displayName: 'Trial job metrics test'
+  - script: |
+      cd test
+      PATH=$HOME/.local/bin:$PATH python3 cli_test.py
+    displayName: 'nnicli test'
