--- a/examples/nas/spos/config_search.yml
+++ b/examples/nas/spos/config_search.yml
@@ -1,6 +1,6 @@
 authorName: unknown
 experimentName: SPOS Search
-trialConcurrency: 4
+trialConcurrency: 2
 maxExecDuration: 7d
 maxTrialNum: 99999
 trainingServicePlatform: local
@@ -12,6 +12,6 @@ tuner:
   className: SPOSEvolution
 trial:
   # to fit in a GTX 1080
-  command: python tester.py --imagenet-dir /data/hdd3/yugzh/imagenet --spos-prep --batch-size 80 --train-iters 250 --test-iters 100
+  command: python tester.py --imagenet-dir /data/ssd1/v-yugzh/imagenet --spos-prep --workers 6
   codeDir: .
   gpuNum: 1
