update eslint rules

--- a/src/nni_manager/.eslintrc
+++ b/src/nni_manager/.eslintrc
@@ -18,7 +18,11 @@
         "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
-        "@typescript-eslint/no-explicit-any": 0
+        "@typescript-eslint/no-explicit-any": 0,
+        "@typescript-eslint/no-namespace": 0,
+        "@typescript-eslint/consistent-type-assertions": 0,
+        "@typescript-eslint/no-inferrable-types": 0,
+        "no-inner-declarations": 0
     },
     "ignorePatterns": [
         "node_modules/",
