enable webui eslint

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,8 @@ jobs:
       set -e
       cd src/nni_manager
       yarn eslint
+      cd ../webui
+      yarn eslint
     displayName: 'Run eslint'
   - script: |
       python3 -m pip install torch==0.4.1 --user
