--- a/src/webui/.eslintrc
+++ b/src/webui/.eslintrc
@@ -1,7 +1,6 @@
 {
     "env": {
         "browser": true,
-        "node": true,
         "es6": true
     },
     "parser": "@typescript-eslint/parser",
@@ -14,6 +13,7 @@
     ],
     "extends": [
         "eslint:recommended",
+        "plugin:react/recommended",
         "plugin:@typescript-eslint/eslint-recommended",
         "plugin:@typescript-eslint/recommended"
     ],
@@ -29,5 +29,10 @@
         "node_modules/",
         "build/",
         "**/*.js"
-    ]
+    ],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    }
 }
