--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -52,7 +52,7 @@
   "scripts": {
     "build": "node scripts/build.js",
     "start": "node --trace-warnings scripts/start.js",
-    "eslint": "npx eslint ./ --ext .ts"
+    "eslint": "npx eslint ./ --ext .tsx,.ts"
   },
   "devDependencies": {
     "@types/node": "^10.14.14",
