--- a/src/webui/.eslintrc
+++ b/src/webui/.eslintrc
@@ -23,7 +23,8 @@
         "@typescript-eslint/consistent-type-assertions": 0,
         "@typescript-eslint/no-inferrable-types": 0,
         "no-inner-declarations": 0,
-        "@typescript-eslint/no-var-requires": 0
+        "@typescript-eslint/no-var-requires": 0,
+        "react/display-name": 0
     },
     "ignorePatterns": [
         "node_modules/",
