--- a/src/nni_manager/package.json
+++ b/src/nni_manager/package.json
@@ -16,6 +16,7 @@
     "deepmerge": "^4.2.2",
     "express": "^4.16.3",
     "express-joi-validator": "^2.0.0",
+    "fs-extra": "^8.1.0",
     "js-base64": "^2.4.9",
     "json5": "^2.1.1",
     "kubernetes-client": "^6.5.0",
@@ -34,6 +35,7 @@
     "@types/chai": "^4.1.4",
     "@types/chai-as-promised": "^7.1.0",
     "@types/express": "^4.16.0",
+    "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.1",
     "@types/js-base64": "^2.3.1",
     "@types/json5": "^0.0.30",
