--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -10,4 +10,4 @@ numpy
 scipy
 coverage
 scikit-learn==0.20
-torch==1.3.1+cpu
+torch==1.3.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
