--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -3,84 +3,152 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "3.10.9",
-    "autoprefixer": "^9.6.1",
-    "axios": "^0.19.0",
-    "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
-    "chalk": "^2.4.2",
-    "copy-to-clipboard": "^3.0.8",
-    "css-loader": "0.28.7",
-    "dotenv": "^8.0.0",
-    "echarts": "^4.5.0",
-    "echarts-for-react": "^2.0.14",
-    "file-loader": "^4.1.0",
-    "fork-ts-checker-webpack-plugin": "^1.5.0",
-    "fs-extra": "^8.1.0",
-    "html-webpack-plugin": "^4.0.0-beta.8",
-    "json5": "^2.1.1",
-    "less": "^3.9.0",
-    "less-loader": "^5.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "monaco-editor": "^0.17.1",
-    "object-assign": "^4.1.1",
-    "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-scss": "^2.0.0",
-    "precss": "^4.0.0",
-    "promise": "^8.0.3",
-    "raf": "^3.4.1",
-    "react": "^16.8.6",
-    "react-dev-utils": "^9.0.1",
-    "react-dom": "^16.8.5",
-    "react-json-tree": "^0.11.2",
-    "react-monaco-editor": "^0.28.0",
-    "react-responsive": "^7.0.0",
-    "react-router": "^3.2.3",
-    "resolve": "^1.6.0",
-    "source-map-loader": "^0.2.1",
-    "style-loader": "^0.23.1",
-    "sw-precache-webpack-plugin": "^0.11.5",
-    "ts-import-plugin": "^1.4.3",
-    "ts-loader": "^6.0.4",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.39.1",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-manifest-plugin": "^2.0.4",
-    "whatwg-fetch": "^3.0.0"
-  },
-  "scripts": {
-    "build": "node scripts/build.js",
-    "start": "node --trace-warnings scripts/start.js",
-    "eslint": "npx eslint ./ --ext .tsx,.ts"
-  },
-  "devDependencies": {
-    "@types/json5": "^0.0.30",
-    "@types/node": "^10.14.14",
-    "@types/react": "16.4.17",
+    "@babel/core": "7.4.3",
+    "@svgr/webpack": "4.1.0",
+    "@types/jest": "24.0.12",
+    "@types/node": "^10.13.0",
+    "@types/react": "16.8.6",
     "@types/react-dom": "^16.0.7",
-    "@types/react-json-tree": "^0.6.11",
-    "@types/react-responsive": "^3.0.3",
     "@types/react-router": "^3.0.20",
     "@typescript-eslint/eslint-plugin": "^2.11.0",
     "@typescript-eslint/parser": "^2.11.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-react": "^7.17.0",
+    "@uifabric/example-data": "^7.0.2",
+    "@uifabric/fluent-theme": "^0.16.7",
+    "@types/json5": "^0.0.30",
+    "axios": "^0.19.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "24.7.1",
+    "babel-loader": "8.0.5",
+    "babel-plugin-named-asset-import": "^0.3.2",
+    "babel-preset-react-app": "^8.0.0",
+    "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "copy-to-clipboard": "^3.0.8",
+    "css-loader": "2.1.1",
+    "dotenv": "6.2.0",
+    "dotenv-expand": "4.2.0",
+    "echarts": "^4.5.0",
+    "echarts-for-react": "^2.0.15-beta.1",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^4.0.0",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "^1.5.0",
+    "file-loader": "3.0.1",
+    "fs-extra": "7.0.1",
+    "html-webpack-plugin": "4.0.0-beta.5",
+    "identity-obj-proxy": "3.0.0",
+    "json5": "^2.1.1",
+    "is-wsl": "^1.1.0",
+    "jest": "24.7.1",
+    "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest-resolve": "24.7.1",
+    "jest-watch-typeahead": "0.3.0",
+    "mini-css-extract-plugin": "0.5.0",
+    "monaco-editor": "^0.19.0",
+    "monaco-editor-webpack-plugin": "^1.8.1",
+    "node-sass": "^4.13.0",
     "npx": "^10.2.0",
-    "typescript": "^3.5.3"
+    "office-ui-fabric-react": "^7.78.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "pnp-webpack-plugin": "1.2.1",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "7.0.1",
+    "postcss-preset-env": "6.6.0",
+    "postcss-safe-parser": "4.0.1",
+    "rc-table": "^6.10.1",
+    "react": "^16.8.6",
+    "react-app-polyfill": "^1.0.0",
+    "react-dev-utils": "^9.0.0",
+    "react-dom": "^16.8.6",
+    "react-json-tree": "^0.11.2",
+    "react-monaco-editor": "^0.32.1",
+    "react-router": "^3.2.3",
+    "react-table": "^7.0.0-rc.15",
+    "resolve": "1.10.0",
+    "sass-loader": "7.1.0",
+    "semver": "6.0.0",
+    "style-loader": "0.23.1",
+    "terser-webpack-plugin": "1.2.3",
+    "typescript": "3.4.5",
+    "url-loader": "1.1.2",
+    "webpack": "4.29.6",
+    "webpack-dev-server": "3.2.1",
+    "webpack-manifest-plugin": "2.0.4",
+    "workbox-webpack-plugin": "4.2.0"
   },
-  "resolutions": {
-    "@types/react": "16.4.17",
-    "js-yaml": "^3.13.1",
-    "serialize-javascript": "^2.1.1"
+  "scripts": {
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js",
+    "eslint": "npx eslint ./ --ext .tsx,.ts"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.d.ts"
+    ],
+    "setupFiles": [
+      "react-app-polyfill/jsdom"
+    ],
+    "setupFilesAfterEnv": [],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
+      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
+    ],
+    "testEnvironment": "jest-environment-jsdom-fourteen",
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
+      "^.+\\.module\\.(css|sass|scss)$"
+    ],
+    "modulePaths": [],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web",
+      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "web.ts",
+      "ts",
+      "web.tsx",
+      "tsx",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node"
+    ],
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ]
   },
   "babel": {
     "presets": [
       "react-app"
     ]
-  },
-  "browserslist": [
-    "defaults"
-  ]
+  }
 }
