fix variable name

--- a/test/training_service.yml
+++ b/test/training_service.yml
@@ -24,7 +24,7 @@ kubeflow:
       image:
   trainingServicePlatform: kubeflow
 
-frameworkController:
+frameworkcontroller:
   maxExecDuration: 15m
   nniManagerIp:
   frameworkcontrollerConfig:
