--- a/src/nni_manager/package.json
+++ b/src/nni_manager/package.json
@@ -13,6 +13,7 @@
     "azure-storage": "^2.10.2",
     "chai-as-promised": "^7.1.1",
     "child-process-promise": "^2.2.1",
+    "deepmerge": "^4.2.2",
     "express": "^4.16.3",
     "express-joi-validator": "^2.0.0",
     "js-base64": "^2.4.9",
@@ -26,8 +27,7 @@
     "ts-deferred": "^1.0.4",
     "typescript-ioc": "^1.2.4",
     "typescript-string-operations": "^1.3.1",
-    "webhdfs": "^1.2.0",
-    "deepmerge": "^4.2.2"
+    "webhdfs": "^1.2.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
