--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.4.3",
     "@svgr/webpack": "4.1.0",
     "@types/jest": "24.0.12",
+    "@types/json5": "^0.0.30",
     "@types/node": "^12.10.0",
     "@types/react": "16.8.6",
     "@types/react-dom": "^16.0.7",
@@ -14,7 +15,6 @@
     "@typescript-eslint/parser": "^2.11.0",
     "@uifabric/example-data": "^7.0.2",
     "@uifabric/fluent-theme": "^0.16.7",
-    "@types/json5": "^0.0.30",
     "axios": "^0.19.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "24.7.1",
@@ -40,12 +40,12 @@
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
-    "json5": "^2.1.1",
     "is-wsl": "^1.1.0",
     "jest": "24.7.1",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
+    "json5": "^2.1.1",
     "mini-css-extract-plugin": "0.5.0",
     "monaco-editor": "^0.19.0",
     "monaco-editor-webpack-plugin": "^1.8.1",
@@ -82,7 +82,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "node scripts/build.js --max_old_space_size=4096",
     "test": "node scripts/test.js",
     "eslint": "npx eslint ./ --ext .tsx,.ts"
   },
