--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -7,7 +7,7 @@
     "@svgr/webpack": "4.1.0",
     "@types/jest": "24.0.12",
     "@types/json5": "^0.0.30",
-    "@types/node": "^12.10.0",
+    "@types/node": "^10.13.0",
     "@types/react": "16.8.6",
     "@types/react-dom": "^16.0.7",
     "@types/react-router": "^3.0.20",
@@ -71,7 +71,6 @@
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
-    "source-map-explorer": "^2.2.2",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
     "typescript": "3.4.5",
@@ -82,9 +81,8 @@
     "workbox-webpack-plugin": "4.2.0"
   },
   "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js --max_old_space_size=4096",
+    "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "eslint": "npx eslint ./ --ext .tsx,.ts"
   },
