--- a/examples/trials/auto-gbdt/config_paiYarn.yml
+++ b/examples/trials/auto-gbdt/config_paiYarn.yml
@@ -1,29 +1,29 @@
 authorName: default
-experimentName: example_mnist-keras
+experimentName: example_auto-gbdt
 trialConcurrency: 1
-maxExecDuration: 1h
+maxExecDuration: 10h
 maxTrialNum: 10
 #choice: local, remote, pai
-trainingServicePlatform: pai
+trainingServicePlatform: paiYarn
 searchSpacePath: search_space.json
 #choice: true, false
 useAnnotation: false
 tuner:
-  #choice: TPE, Random, Anneal, Evolution, BatchTuner, MetisTuner
+  #choice: TPE, Random, Anneal, Evolution, BatchTuner, MetisTuner, GPTuner
   #SMAC (SMAC should be installed through nnictl)
   builtinTunerName: TPE
   classArgs:
     #choice: maximize, minimize
-    optimize_mode: maximize
+    optimize_mode: minimize
 trial:
-  command: python3 mnist-keras.py
+  command: python3 main.py
   codeDir: .
   gpuNum: 0
   cpuNum: 1
   memoryMB: 8196
   #The docker image to run nni job on pai
   image: msranni/nni:latest
-paiConfig:
+paiYarnConfig:
   #The username to login pai
   userName: username
   #The password to login pai
