--- a/examples/trials/ga_squad/config_paiYarn.yml
+++ b/examples/trials/ga_squad/config_paiYarn.yml
@@ -1,29 +1,29 @@
 authorName: default
-experimentName: example_mnist_pytorch
+experimentName: example_ga_squad
 trialConcurrency: 1
 maxExecDuration: 1h
 maxTrialNum: 10
 #choice: local, remote, pai
-trainingServicePlatform: pai
-searchSpacePath: search_space.json
+trainingServicePlatform: paiYarn
 #choice: true, false
 useAnnotation: false
+#Your nni_manager ip
+nniManagerIp: 10.10.10.10
 tuner:
-  #choice: TPE, Random, Anneal, Evolution, BatchTuner, MetisTuner, GPTuner
-  #SMAC (SMAC should be installed through nnictl)
-  builtinTunerName: TPE
+  codeDir: ../../tuners/ga_customer_tuner
+  classFileName: customer_tuner.py
+  className: CustomerTuner
   classArgs:
-    #choice: maximize, minimize
     optimize_mode: maximize
 trial:
-  command: python3 mnist.py
+  command: chmod +x ./download.sh && ./download.sh && python3 trial.py
   codeDir: .
   gpuNum: 0
   cpuNum: 1
-  memoryMB: 8196
+  memoryMB: 32869
   #The docker image to run nni job on pai
   image: msranni/nni:latest
-paiConfig:
+paiYarnConfig:
   #The username to login pai
   userName: username
   #The password to login pai
