--- a/examples/trials/mnist-keras/config_paiYarn.yml
+++ b/examples/trials/mnist-keras/config_paiYarn.yml
@@ -1,33 +1,29 @@
 authorName: default
-experimentName: example_mnist_hyperband
+experimentName: example_mnist-keras
+trialConcurrency: 1
 maxExecDuration: 1h
-maxTrialNum: 10000
-trialConcurrency: 10
+maxTrialNum: 10
 #choice: local, remote, pai
-trainingServicePlatform: pai
+trainingServicePlatform: paiYarn
 searchSpacePath: search_space.json
 #choice: true, false
 useAnnotation: false
-advisor:
-  #choice: Hyperband, BOHB
-  #(BOHB should be installed through nnictl)
-  builtinAdvisorName: Hyperband
+tuner:
+  #choice: TPE, Random, Anneal, Evolution, BatchTuner, MetisTuner
+  #SMAC (SMAC should be installed through nnictl)
+  builtinTunerName: TPE
   classArgs:
-    #R: the maximum trial budget
-    R: 100
-    #eta: proportion of discarded trials
-    eta: 3
     #choice: maximize, minimize
     optimize_mode: maximize
 trial:
-  command: python3 mnist.py
+  command: python3 mnist-keras.py
   codeDir: .
   gpuNum: 0
   cpuNum: 1
   memoryMB: 8196
   #The docker image to run nni job on pai
   image: msranni/nni:latest
-paiConfig:
+paiYarnConfig:
   #The username to login pai
   userName: username
   #The password to login pai
