--- a/examples/trials/mnist-pytorch/config_paiYarn.yml
+++ b/examples/trials/mnist-pytorch/config_paiYarn.yml
@@ -1,14 +1,15 @@
 authorName: default
-experimentName: example_mnist
+experimentName: example_mnist_pytorch
 trialConcurrency: 1
 maxExecDuration: 1h
 maxTrialNum: 10
 #choice: local, remote, pai
-trainingServicePlatform: pai
+trainingServicePlatform: paiYarn
+searchSpacePath: search_space.json
 #choice: true, false
-useAnnotation: true
+useAnnotation: false
 tuner:
-  #choice: TPE, Random, Anneal, Evolution, BatchTuner, MetisTuner
+  #choice: TPE, Random, Anneal, Evolution, BatchTuner, MetisTuner, GPTuner
   #SMAC (SMAC should be installed through nnictl)
   builtinTunerName: TPE
   classArgs:
@@ -22,7 +23,7 @@ trial:
   memoryMB: 8196
   #The docker image to run nni job on pai
   image: msranni/nni:latest
-paiConfig:
+paiYarnConfig:
   #The username to login pai
   userName: username
   #The password to login pai
