--- a/examples/trials/sklearn/classification/config_paiYarn.yml
+++ b/examples/trials/sklearn/classification/config_paiYarn.yml
@@ -1,29 +1,29 @@
 authorName: default
-experimentName: example_mnist
+experimentName: example_sklearn
 trialConcurrency: 1
 maxExecDuration: 1h
-maxTrialNum: 10
+maxTrialNum: 100
 #choice: local, remote, pai
-trainingServicePlatform: pai
+trainingServicePlatform: paiYarn
 searchSpacePath: search_space.json
 #choice: true, false
 useAnnotation: false
 tuner:
-  #choice: TPE, Random, Anneal, Evolution, BatchTuner, MetisTuner, GPTuner
+  #choice: TPE, Random, Anneal, Evolution, BatchTuner,MetisTuner
   #SMAC (SMAC should be installed through nnictl)
   builtinTunerName: TPE
   classArgs:
     #choice: maximize, minimize
     optimize_mode: maximize
 trial:
-  command: python3 mnist.py
+  command: python3 main.py
   codeDir: .
   gpuNum: 0
   cpuNum: 1
   memoryMB: 8196
   #The docker image to run nni job on pai
   image: msranni/nni:latest
-paiConfig:
+paiYarnConfig:
   #The username to login pai
   userName: username
   #The password to login pai
