--- a/examples/trials/auto-gbdt/config_pai.yml
+++ b/examples/trials/auto-gbdt/config_pai.yml
@@ -1,31 +1,24 @@
 authorName: default
-experimentName: example_FashionMNIST-network-morphism
+experimentName: example_auto-gbdt
 trialConcurrency: 1
-maxExecDuration: 24h
+maxExecDuration: 10h
 maxTrialNum: 10
 #choice: local, remote, pai
 trainingServicePlatform: pai
+searchSpacePath: search_space.json
 #choice: true, false
 useAnnotation: false
 tuner:
-  #choice: TPE, Random, Anneal, Evolution, BatchTuner, NetworkMorphism
+  #choice: TPE, Random, Anneal, Evolution, BatchTuner, MetisTuner, GPTuner
   #SMAC (SMAC should be installed through nnictl)
-  builtinTunerName: NetworkMorphism
+  builtinTunerName: TPE
   classArgs:
     #choice: maximize, minimize
-    optimize_mode: maximize
-    # for now, this tuner only supports cv domain
-    task: cv
-    #input image width
-    input_width: 28
-    #input image channel
-    input_channel: 1
-    #number of classes
-    n_output_node: 10
+    optimize_mode: minimize
 trial:
-  command: python3 FashionMNIST_keras.py
+  command: python3 main.py
   codeDir: .
-  gpuNum: 1
+  gpuNum: 0
   cpuNum: 1
   memoryMB: 8196
   #The docker image to run nni job on pai
