--- a/examples/trials/ga_squad/config_pai.yml
+++ b/examples/trials/ga_squad/config_pai.yml
@@ -1,33 +1,26 @@
 authorName: default
-experimentName: example_FashionMNIST-network-morphism
+experimentName: example_ga_squad
 trialConcurrency: 1
-maxExecDuration: 24h
+maxExecDuration: 1h
 maxTrialNum: 10
 #choice: local, remote, pai
 trainingServicePlatform: pai
 #choice: true, false
 useAnnotation: false
+#Your nni_manager ip
+nniManagerIp: 10.10.10.10
 tuner:
-  #choice: TPE, Random, Anneal, Evolution, BatchTuner, NetworkMorphism
-  #SMAC (SMAC should be installed through nnictl)
-  builtinTunerName: NetworkMorphism
+  codeDir: ../../tuners/ga_customer_tuner
+  classFileName: customer_tuner.py
+  className: CustomerTuner
   classArgs:
-    #choice: maximize, minimize
     optimize_mode: maximize
-    # for now, this tuner only supports cv domain
-    task: cv
-    #input image width
-    input_width: 28
-    #input image channel
-    input_channel: 1
-    #number of classes
-    n_output_node: 10
 trial:
-  command: python3 FashionMNIST_keras.py
+  command: chmod +x ./download.sh && ./download.sh && python3 trial.py
   codeDir: .
-  gpuNum: 1
+  gpuNum: 0
   cpuNum: 1
-  memoryMB: 8196
+  memoryMB: 32869
   #The docker image to run nni job on pai
   image: msranni/nni:latest
   nniManagerNFSMountPath: /home/user/mnt
