--- a/examples/trials/network_morphism/FashionMNIST/config_paiYarn.yml
+++ b/examples/trials/network_morphism/FashionMNIST/config_paiYarn.yml
@@ -4,7 +4,7 @@ trialConcurrency: 1
 maxExecDuration: 24h
 maxTrialNum: 10
 #choice: local, remote, pai
-trainingServicePlatform: pai
+trainingServicePlatform: paiYarn
 #choice: true, false
 useAnnotation: false
 tuner:
@@ -30,13 +30,10 @@ trial:
   memoryMB: 8196
   #The docker image to run nni job on pai
   image: msranni/nni:latest
-  nniManagerNFSMountPath: /home/user/mnt
-  containerNFSMountPath: /mnt/data/user
-  paiStoragePlugin: team_wise
-paiConfig:
+paiYarnConfig:
   #The username to login pai
   userName: username
-  #The token to login pai
-  token: token
+  #The password to login pai
+  passwd: password
   #The host of restful server of pai
   host: 10.10.10.10
